[package]
name = "korepi"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
md5 = "0.7"
base64 = "0.22"
soft-aes = "0.2"
rsa = "0.9"
sha2 = "0.10"
rand = "0.8"
toml = "0.8"
useful_macros = { path = "../useful_macros" }